Updated lesson 00 so that interactive plotting/backend stuff is removed.  I couldn't make it work quickly via Binder, so that's something to come back to.

--- a/week_00_basics/Lesson_00_tour.ipynb
+++ b/week_00_basics/Lesson_00_tour.ipynb
@@ -487,7 +487,13 @@
    "source": [
     "We have used the function `np.array()` to change the type of `range(0,10)` from a list to an array, in Python you can do this for most data types. Here it is useful because you cannot use mathematical functions like \\** on lists like you can arrays.  The `range(0,10)` function creates a list of integers from 0 to 10.  \n",
     "\n",
-    "This plot is a static image, which is handy if we want to see exactly what will be saved when we call `plt.savefig()`.  If we want to use an interactive plot rather than have our graph appear as an image in the notebook, then we need to change the 'backend' accordingly:"
+    "This plot is a static image, which is handy if we want to see exactly what will be saved when we call `plt.savefig()`.  If we want to use an interactive plot rather than have our graph appear as an image in the notebook, then we need to change the 'backend' accordingly.  This doesn't work easily when the notebook is hosted remotely, so we'll save it in case you are running this via Binder.\n",
+    "\n",
+    "If we want more control over the plot, it's conventional to use the _object oriented_ approach.  This means that we assign a variable to keep track of each part of the figure and then tell that part what we want it to do.  The structure is more or less like this: When you plot something, a figure object is created.  Then inside that an axis object is created.  Then we tell the axis to generate a certain kind of plot inside itself.  Instead of calling functions that find the current plot and insert labels, etc., you can keep track of the underlying axis *object* and call its *methods*.  \n",
+    "\n",
+    "Most plotting is done via the 'handles' of the axis, figure, etc. objects because it allows more control over the details.  I wanted to have it here so that it won't look totally unfamiliar when you google around.\n",
+    "\n",
+    "Here's the same plot as above using object oriented conventions:"
    ]
   },
   {
@@ -496,17 +502,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib notebook\n",
-    "import matplotlib.pyplot as plt  #map namespace of functions in module matplotlib.pyplot to reference label \"plt\"\n",
-    "\n",
-    "x = np.array(range(0,10))\n",
-    "y = x**2\n",
-    "plt.plot(x,y, \"bo\", label=\"data\")\n",
-    "plt.xlabel(\"Number ($x$)\")\n",
-    "plt.ylabel(\"Square ($x^2$)\")\n",
-    "plt.legend(bbox_to_anchor=(1.5,1))\n",
-    "plt.title(\"Square of numbers 1-10\")\n",
-    "plt.show() #render the plot now rather than waiting for other things to be added"
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot()\n",
+    "ax.plot(x,y, \"bo\", label=\"data\")\n",
+    "ax.set_xlabel(\"Number ($x$)\")\n",
+    "ax.set_ylabel(\"Square ($x^2$)\")\n",
+    "ax.legend(bbox_to_anchor=(1.5,1))\n",
+    "ax.set_title(\"Square of numbers 1-10\")"
    ]
   },
   {
@@ -526,9 +528,6 @@
    },
    "outputs": [],
    "source": [
-    "%matplotlib inline \n",
-    "#(easier on the computer for now)\n",
-    "\n",
     "values = np.zeros([100,100],float)  #create 100 x 100 array of zeros as floating point numbers (not integers)\n",
     "\n",
     "#fill with sum of x-position and y-position\n",
@@ -561,9 +560,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice also that the new cell already had access to the data in `values` and understood the label.  Anything you've already run in the notebook that is at the scope of the cell (i.e. not inside another function) is available to future cells.  If you don't run your cells in order, you might have a problem the next time you open your notebook.  There's a fix for this described below in the exercises.\n",
+    "Notice also that the new cell already had access to the data in `values` and understood the label.  Anything you've already run in the notebook that is at the scope of the cell (i.e. not inside another function) is available to future cells.  If you don't run your cells in order, you might have a problem the next time you open your notebook.  \n",
     "\n",
-    "I have aesthetic and informational issues with the default colormap, so I typically choose one that's appropriate to my purpose and occasionally create my own.  In addition to calling functions that find the current plot and insert labels, etc., you can also interact with the underlying axis *object* and call its *methods*.  The type and memory location shown in angle brackets above is the un-labeled object that is the return value of the `imshow()` function."
+    "I have aesthetic and informational issues with the some colormaps, so I typically choose one that's appropriate to my purpose and occasionally create my own.  Note that we are using the object oriented approach in the below example but in a slightly different way from above.  This is so that you can see some different ways of doing things."
    ]
   },
   {
